TradeMarketing/force-app/main/default/objects/Return__c/Return__c.object-meta.xml
<CustomObject>
    <description>Parent record that holds all return line items for a specific return on a specific account.</description>
    <label>Return</label>
    <nameField>
        <displayFormat>RET-{000000}</displayFormat>
        <label>Return Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>