TradeMarketing/force-app/main/default/objects/Return__c/fields/Account_GP_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_GP_Number__c</fullName>
    <formula>Account__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account GP Number</label>
    <type>Text</type>
</CustomField>