TradeMarketing/force-app/main/default/objects/Return__c/fields/External_Inventory_User__c.field-meta.xml
<CustomField>
    <fullName>External_Inventory_User__c</fullName>
    <label>External Inventory User</label>
    <type>Email</type>
</CustomField>