TradeMarketing/force-app/main/default/objects/Return__c/fields/Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiated_Date__c</fullName>
    <description>Date that the return was initiated</description>
    <label>Initiated Date</label>
    <type>Date</type>
</CustomField>