TradeMarketing/force-app/main/default/objects/Return__c/fields/Initiator__c.field-meta.xml
<CustomField>
    <fullName>Initiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal Good Times employee that created/initiated the return.</description>
    <label>Initiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>