TradeMarketing/force-app/main/default/objects/Return__c/fields/Initiator_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Initiator_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiator Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Returns5</relationshipName>
    <type>Lookup</type>
</CustomField>