TradeMarketing/force-app/main/default/objects/Return__c/fields/Initiator_Supervisor_1__c.field-meta.xml
<CustomField>
    <fullName>Initiator_Supervisor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiator Supervisor 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Returns1</relationshipName>
    <type>Lookup</type>
</CustomField>