TradeMarketing/force-app/main/default/objects/Return__c/fields/Initiator_Supervisor_2__c.field-meta.xml
<CustomField>
    <fullName>Initiator_Supervisor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiator Supervisor 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Returns2</relationshipName>
    <type>Lookup</type>
</CustomField>