TradeMarketing/force-app/main/default/objects/Return__c/fields/Initiator_Supervisor_3__c.field-meta.xml
<CustomField>
    <fullName>Initiator_Supervisor_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiator Supervisor 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Returns3</relationshipName>
    <type>Lookup</type>
</CustomField>