TradeMarketing/force-app/main/default/objects/Return__c/fields/Pallets__c.field-meta.xml
<CustomField>
    <fullName>Pallets__c</fullName>
    <description>Number of pallets that will be shipped in the return.</description>
    <label>Pallets</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>