TradeMarketing/force-app/main/default/objects/Return__c/fields/Return_Form__c.field-meta.xml
<CustomField>
    <fullName>Return_Form__c</fullName>
    <formula>HYPERLINK(&quot;/apex/GT_ReturnForm?id=&quot;&amp;Id, &quot;Launch Return Form&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Form</label>
    <type>Text</type>
</CustomField>