TradeMarketing/force-app/main/default/objects/Return__c/fields/Return_Number_Title__c.field-meta.xml
<CustomField>
    <fullName>Return_Number_Title__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Number</label>
    <type>Text</type>
</CustomField>