TradeMarketing/force-app/main/default/objects/Return__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Indicates the day that the return was submitted for processing by the inventory team.</description>
    <inlineHelpText>Indicates the day that the return was submitted for processing by the inventory team.</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>