TradeMarketing/force-app/main/default/objects/Return__c/fields/Total_Displays__c.field-meta.xml
<CustomField>
    <fullName>Total_Displays__c</fullName>
    <label>Total Displays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>