TradeMarketing/force-app/main/default/objects/Return__c/fields/Total_Pouches__c.field-meta.xml
<CustomField>
    <fullName>Total_Pouches__c</fullName>
    <label>Total Pouches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>