TradeMarketing/force-app/main/default/objects/Return__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Postal tracking number to track shipment.</description>
    <label>Tracking Number</label>
    <type>TextArea</type>
</CustomField>