TradeMarketing/force-app/main/default/objects/Return__c/listViews/Inventory_Team_Queue_Return.listView-meta.xml
<ListView>
    <fullName>Inventory_Team_Queue_Return</fullName>
    <columns>Return_Form__c</columns>
    <columns>Account__c</columns>
    <columns>Account_GP_Number__c</columns>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Initiator__c</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Queue</filterScope>
    <label>Inventory Team Queue</label>
    <queue>Inventory_Team_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>